src/objects/ints__Credit_Pull_Options__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>ints__Credit_Public_Record__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Credit Public Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Credit_Report_Inquiry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Report Inquiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Credit_Report_Key__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Credit Report Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Credit_Report_Liability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Report Liability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Credit_Report_Score__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Credit Report Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Credit_Report_Summary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Credit Report Summary</label>
        <type>Checkbox</type>
    </fields>
    <label>Meridian Link Credit Pull Options</label>
</CustomObject>